# --C-Compiler

./: .gitignore  CMakeLists.txt
CMake/: AddGTest.cmake
Interpreter/: CMakeLists.txt
Interpreter/ANormalForm/: CMakeLists.txt
Interpreter/ANormalForm/inc/Interpreter/ANormalForm/: Closure.hpp  Declaration.hpp  DeclarationNormalForm.hpp  Expression.hpp  ExpressionNormalForm.hpp  Printers.hpp  Statement.hpp  StatementNormalForm.hpp  TranslationUnitNormalForm.hpp
Interpreter/ANormalForm/src/: Environment.cpp  Expression.cpp  Printers.cpp
Interpreter/ANormalForm/test/: CMakeLists.txt
Interpreter/ANormalForm/test/inc/: ExpressionTest.hpp
Interpreter/ANormalForm/test/src/: ExpressionTest.cpp
Interpreter/ANormalForm/test/test-data/: main-test.c  main.m2c
Interpreter/TAC/: CMakeLists.txt
Interpreter/TAC/inc/: Closure.hpp  Environment.hpp
Interpreter/TAC/inc/Interpreter/TAC/: ANormalFormToTAC.hpp  AssignmentToTAC.hpp  Closure.hpp  Environment.hpp  Frame.hpp  Instructions.hpp  PrintTAC.hpp
Interpreter/TAC/src/: ANormalFormToTAC.cpp  AssignmentToTAC.cpp  Closure.cpp  Environment.cpp  Frame.cpp  PrintTAC.cpp
Interpreter/TAC/test/: CMakeLists.txt
Interpreter/TAC/test/inc/: TACTest.hpp
Interpreter/TAC/test/src/: TACTest.cpp
Interpreter/TAC/test/test-data/: main.m2c
Parser/: CMakeLists.txt
Parser/bison/private/: C.output  C.tab.cpp  C.y  stack.hh
Parser/bison/public/: Parser.hpp
Parser/flex/: C.flex  lex.yy.cpp
Parser/inc/Parser/: ASTNode.hpp  AbstractSyntaxTree.hpp  C.tab.h  Grammar.hpp  Parse.hpp  Parser.hpp  Scanner.hpp  Token.hpp
Parser/inc/Parser/AST/: AST.hpp  ASTAdapted.hpp  Declaration.hpp  DeclarationAdapted.hpp  Expression.hpp  ExpressionAdapted.hpp  Printers.hpp  Statement.hpp  StatementAdapted.hpp
Parser/inc/Parser/Annotation/: DefaultAnnotation.hpp  PrintAnnotation.hpp  Tags.hpp
Parser/inc/Parser/Grammar/: Additive.hpp  Equality.hpp  Grammar.hpp  Identifier.hpp  Keywords.hpp  Multiplicative.hpp  Operators.hpp  Relational.hpp  Rules.hpp  StringLiteral.hpp  Symbols.hpp
Parser/src/: ASTNode.cpp  C.flex  C.y
Parser/test/: CMakeLists.txt
Parser/test/inc/: ParserTest.hpp
Parser/test/src/: ParserTest.cpp
Parser/test/test-data/: main.c
